RESOLVED FIXED143867
[SOUP] ResourceRequest cache policy is not encoded/decoded in IPC messages
https://bugs.webkit.org/show_bug.cgi?id=143867
Summary [SOUP] ResourceRequest cache policy is not encoded/decoded in IPC messages
Carlos Garcia Campos
Reported 2015-04-17 02:22:23 PDT
We need it for the disk-cache layout tests.
Attachments
Patch (2.00 KB, patch)
2015-04-17 02:24 PDT, Carlos Garcia Campos
svillar: review+
Carlos Garcia Campos
Comment 1 2015-04-17 02:24:36 PDT
Sergio Villar Senin
Comment 2 2015-04-17 02:49:50 PDT
Comment on attachment 251009 [details] Patch Do we have unit tests for this?
Carlos Garcia Campos
Comment 3 2015-04-17 03:09:49 PDT
(In reply to comment #2) > Comment on attachment 251009 [details] > Patch > > Do we have unit tests for this? Cache-policy is not exposed in the api in any way. It's covered by disk-cache layout tests
Carlos Garcia Campos
Comment 4 2015-04-17 03:18:05 PDT
Note You need to log in before you can comment on or make changes to this bug.