[SOUP] ResourceRequest cache policy is not encoded/decoded in IPC messages https://bugs.webkit.org/show_bug.cgi?id=143867

Reviewed by Sergio Villar Senin.

Encode/Decode the ResourceRequest cache policy.

* Shared/soup/WebCoreArgumentCodersSoup.cpp:
(IPC::ArgumentCoder<ResourceRequest>::encodePlatformData):
(IPC::ArgumentCoder<ResourceRequest>::decodePlatformData):

Canonical link: https://commits.webkit.org/161882@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@182944 268f45cc-cd09-0410-ab3c-d52691b4dbfc