Source/WebKit2/Shared/soup/WebCoreArgumentCodersSoup.cpp
@@ -57,6 +57,7 @@ void ArgumentCoder<ResourceRequest>::encodePlatformData(ArgumentEncoder& encoder
     encoder << resourceRequest.firstPartyForCookies().string();
     encoder << resourceRequest.allowCookies();
     encoder.encodeEnum(resourceRequest.priority());
+    encoder.encodeEnum(resourceRequest.cachePolicy());
 
     encoder << static_cast<uint32_t>(resourceRequest.soupMessageFlags());
     encoder << resourceRequest.initiatingPageID();
@@ -108,6 +109,11 @@ bool ArgumentCoder<ResourceRequest>::decodePlatformData(ArgumentDecoder& decoder
     if (!decoder.decodeEnum(priority))
         return false;
     resourceRequest.setPriority(priority);
+
+    ResourceRequestCachePolicy cachePolicy;
+    if (!decoder.decodeEnum(cachePolicy))
+        return false;
+    resourceRequest.setCachePolicy(cachePolicy);
 
     uint32_t soupMessageFlags;
     if (!decoder.decode(soupMessageFlags))
